syntax = "proto3";

import "song.proto";
import "google/protobuf/wrappers.proto";

message SongTableColumn {
  Song.MetadataTag tag = 1;
  google.protobuf.Int32Value sort_order = 2;
  bool is_sort_desc = 3;
  int32 width_flex = 4;
}

message CommonSongTableState {
  repeated SongTableColumn columns = 1;
}
